new poe class name column added